--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -51,6 +51,17 @@
 {{ partial "svg" . }}
 
 <script src="/app.js"></script>
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
 
 </body>
 
