--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -1,7 +1,7 @@
 <head>
 
-	<title>{{ .Title }} | Kaldi</title>
-	<link rel="stylesheet" href="/css/main.css" />
+	<title>{{ .Title }} | Dian Palupi</title>
+	<link rel="stylesheet" href="https://www.dpalupi.com/css/main.css" />
 
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -10,18 +10,15 @@
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
 
 	<!-- Favicons -->
-	<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
-	<link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
-	<link rel="manifest" href="/manifest.json">
-	<link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#ff4400">
-	<meta name="theme-color" content="#fff">
+	<link rel="icon" type="image/png" href="https://www.dpalupi.com/img/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="https://www.dpalupi.com/img/favicon-16x16.png" sizes="16x16">
+	<link rel="icon" type="image/x-icon" href="https://www.dpalupi.com/favicon.ico">
 
 	<!-- Open Graph -->
 	<meta property="og:type" content="business.business">
-	<meta property="og:title" content="Kaldi | Great coffee with a conscience">
-	<meta property="og:url" content="/">
-	<meta property="og:image" content="/img/og-image.jpg">
+	<meta property="og:title" content="Indonesia Legal Consulting in Bali | Dian Palupi">
+	<meta property="og:url" content="https://www.dpalupi.com">
+	<meta property="og:image" content="https://www.dpalupi.com/img/og-image.jpg">
 
 	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
