--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,16 +1,10 @@
 <nav class="overflow-x-scroll overflow-x-visible-ns flex justify-between items-center center bg-white divider-grey relative">
-
-	<!-- Logo -->
 	<a href="/" class="pa3 db mr4 h-100 w3 flex-none">
-		<img src="/img/logo.png" alt="DPalupi" width="120" height="34" class="br0 db mb0 w-100"/>
+	<img src="/img/logo.png" alt="DPalupi" width="120" height="34" class="br0 db mb0 w-100"/>
 	</a>
-
-	<!-- Primary Nav -->
 	<ul class="flex b grey-3">
-
-		<li><a href="/post" class="pa3 no-underline db">Blog</a></li>
-
-		<li><a href="/contact" class="pa3 no-underline db">Contact</a></li>
+		<li><a href="/about" class="pa3 no-underline db">About</a></li>
+		<li><a href="/contact" class="pa3 no-underline db">Contact</a></li>		
+		<li><a href="/post" class="pa3 no-underline db">Blog</a></li>	
 	</ul>
-
 </nav>
